CSS fix to mak whitespace go away on small screens
html,body{
	width:100%;
	overflow-x:hidden;
}

--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,11 @@
 .row {
 	margin-bottom: 0px;
 }
+html,body{
+	width:100%;
+	overflow-x:hidden;
+}
+
 
 /*--- Top down CSS ---*/
 /* nav */
